--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@angular/platform-browser": "2.4.1",
     "@angular/platform-browser-dynamic": "2.4.1",
     "@angular/platform-server": "2.4.1",
+    "@angular/router": "^3.3.1",
     "core-js": "~2.4.1",
     "reflect-metadata": "~0.1.3",
     "rxjs": "~5.0.1",
